Provide clear separation between an consumer and a producer as they have very different configurations and actions.